[gd_scene load_steps=37 format=3 uid="uid://btx3k1t5ljiay"]

[ext_resource type="Script" path="res://Scripts/Camera.gd" id="1_0pavo"]
[ext_resource type="PackedScene" uid="uid://d0r8xnw3ed75j" path="res://Scenes/Prefabs/player.tscn" id="1_1kp8j"]
[ext_resource type="Texture2D" uid="uid://csi8qha45bg4o" path="res://Sprites/UI/Backgrounds/chess-gray.png" id="1_pfe4p"]
[ext_resource type="Script" path="res://Scripts/saving_manager.gd" id="1_v20gq"]
[ext_resource type="PackedScene" uid="uid://c0ng0pc3sl2v2" path="res://Scenes/Prefabs/death_particle.tscn" id="2_73x1n"]
[ext_resource type="Script" path="res://addons/trail_2d/trail_2d.gd" id="2_fq063"]
[ext_resource type="Script" path="res://Scripts/FPS.gd" id="2_whu8q"]
[ext_resource type="Script" path="res://Scripts/TrajectoryLine.gd" id="3_i6umq"]
[ext_resource type="PackedScene" uid="uid://gb2sc8dbv1g8" path="res://Scenes/Prefabs/orb_break_particle.tscn" id="4_11vcy"]
[ext_resource type="PackedScene" uid="uid://dkfnjjqknyida" path="res://Scenes/Prefabs/blue_orb.tscn" id="7_dssli"]
[ext_resource type="PackedScene" uid="uid://bbth6blwedp83" path="res://Scenes/Prefabs/purple_orb.tscn" id="8_uvmcu"]
[ext_resource type="PackedScene" uid="uid://u82pmgupn3sm" path="res://Scenes/Prefabs/yellow_orb.tscn" id="9_032rp"]
[ext_resource type="Texture2D" uid="uid://b6xr7p7ncefkh" path="res://Sprites/UI/Pause.png" id="10_ohit5"]
[ext_resource type="PackedScene" uid="uid://ko1arpgno8ha" path="res://Scenes/Prefabs/boss_1.tscn" id="11_wjyi5"]
[ext_resource type="PackedScene" uid="uid://csyq2erif8doq" path="res://Scenes/Prefabs/red_orb.tscn" id="12_8i2ib"]
[ext_resource type="Texture2D" uid="uid://dc4l1pdxdh8yq" path="res://Sprites/UI/coin.svg" id="13_trycy"]
[ext_resource type="Shader" path="res://Shaders/blur_screen.gdshader" id="16_r4dn1"]
[ext_resource type="Theme" uid="uid://h1n0lhl2erdg" path="res://Styles/Button.tres" id="17_l1n2d"]
[ext_resource type="Script" path="res://Scripts/MenuPanel.gd" id="17_pb6ig"]
[ext_resource type="PackedScene" uid="uid://c4y0bm8im4qh4" path="res://Scenes/Prefabs/settings.tscn" id="19_qg7uq"]
[ext_resource type="Texture2D" uid="uid://d33tfhgscxwfx" path="res://Sprites/UI/Back.png" id="20_lddes"]
[ext_resource type="FontFile" uid="uid://ct5byy0wc0l2y" path="res://Fonts/Montserrat/static/Montserrat-Medium.ttf" id="22_7g7lu"]
[ext_resource type="FontFile" uid="uid://b3jg4cggwp3mj" path="res://Fonts/Rubik-Bold.ttf" id="23_7qgra"]
[ext_resource type="FontFile" uid="uid://cyy2hnt7xpk5q" path="res://Fonts/Montserrat/Montserrat-SemiBold.ttf" id="24_yplha"]
[ext_resource type="Texture2D" uid="uid://dnjveo61ujkb1" path="res://Sprites/UI/cross.svg" id="25_5ufdy"]

[sub_resource type="Curve" id="Curve_4vwga"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ql7xu"]
offsets = PackedFloat32Array(0.153374, 0.993865)
colors = PackedColorArray(0, 0.494118, 1, 0.392157, 0.497733, 0.70917, 1, 0)

[sub_resource type="Curve" id="Curve_tuh4p"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_rmlxo"]
colors = PackedColorArray(1, 1, 1, 0.392157, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iclm"]
bg_color = Color(0, 0, 0, 0.392157)
skew = Vector2(1, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c1xnl"]
bg_color = Color(0, 0.572549, 0.8, 1)
skew = Vector2(1, 0)
border_color = Color(0, 0.411765, 0.8, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f0w2d"]
bg_color = Color(0.025, 0.0333333, 0.05, 0.392157)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dg882"]
shader = ExtResource("16_r4dn1")
shader_parameter/blur_intensity = 3.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hvl06"]

[sub_resource type="Theme" id="Theme_3pdej"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogkg5"]
bg_color = Color(0, 0, 0, 0.498039)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.568, 0.568, 0.8, 0.333333)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="MainLevel" type="Node2D"]
metadata/_edit_horizontal_guides_ = [-1016.0]

[node name="Saving manager" type="Node" parent="."]
script = ExtResource("1_v20gq")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1, 0.5)
motion_mirroring = Vector2(0, 8690)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -10
texture_filter = 1
position = Vector2(432, 1600)
scale = Vector2(86.9, 86.9)
texture = ExtResource("1_pfe4p")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(432, 1296)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_vertical_offset = -0.5
drag_left_margin = 1.0
drag_top_margin = 0.0
drag_right_margin = 1.0
drag_bottom_margin = 1.0
script = ExtResource("1_0pavo")

[node name="Player" parent="." instance=ExtResource("1_1kp8j")]
unique_name_in_owner = true
position = Vector2(432, 1296)
death_particle = ExtResource("2_73x1n")
orb_break_particle = ExtResource("4_11vcy")
blue_orb = ExtResource("7_dssli")
red_orb = ExtResource("12_8i2ib")
purple_orb = ExtResource("8_uvmcu")
yellow_orb = ExtResource("9_032rp")
boss_1 = ExtResource("11_wjyi5")

[node name="Trail2D2" type="Line2D" parent="Player"]
z_index = -1
width = 32.0
width_curve = SubResource("Curve_4vwga")
gradient = SubResource("Gradient_ql7xu")
antialiased = true
script = ExtResource("2_fq063")
length = 32

[node name="Line2D2" type="Line2D" parent="Player"]
z_index = -1
width = 20.0
width_curve = SubResource("Curve_tuh4p")
gradient = SubResource("Gradient_rmlxo")
script = ExtResource("3_i6umq")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hitstop flash" type="ColorRect" parent="UI"]
visible = false
self_modulate = Color(1, 1, 1, 0.235294)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Coins" type="Label" parent="UI"]
anchors_preset = -1
anchor_top = 0.078
anchor_bottom = 0.078
offset_left = 64.0
offset_top = -54.784
offset_right = 256.0
offset_bottom = 56.216
pivot_offset = Vector2(96, 55)
theme_override_colors/font_color = Color(0.96, 0.768, 0, 1)
theme_override_fonts/font = ExtResource("24_yplha")
theme_override_font_sizes/font_size = 90
text = "0"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/Coins"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.5
anchor_top = 0.505
anchor_right = -0.5
anchor_bottom = 0.505
offset_left = 40.0
offset_top = -24.055
offset_right = 88.0
offset_bottom = 23.945
pivot_offset = Vector2(24, 24)
texture = ExtResource("13_trycy")

[node name="FPSLabel" type="Label" parent="UI"]
z_index = 1
offset_left = 16.0
offset_top = 8.0
offset_right = 208.0
offset_bottom = 104.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_font_sizes/font_size = 32
text = "FPS:"
metadata/_edit_use_anchors_ = true

[node name="FPS" type="Label" parent="UI" node_paths=PackedStringArray("FPSLabel")]
unique_name_in_owner = true
process_mode = 3
modulate = Color(0.498039, 1, 1, 1)
z_index = 1
offset_left = 88.0
offset_top = 8.0
offset_right = 281.0
offset_bottom = 104.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0.501961, 1)
theme_override_font_sizes/font_size = 32
text = "60"
script = ExtResource("2_whu8q")
FPSLabel = NodePath("../FPSLabel")
metadata/_edit_use_anchors_ = true

[node name="Pause" type="Button" parent="UI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -176.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 176.0
grow_horizontal = 0
pivot_offset = Vector2(160, 0)
theme = ExtResource("17_l1n2d")
theme_override_constants/icon_max_width = 90
icon = ExtResource("10_ohit5")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_left = 128.0
offset_top = 192.0
offset_right = -128.0
offset_bottom = 224.0
grow_horizontal = 2
pivot_offset = Vector2(304, 16)
size_flags_horizontal = 4
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_3iclm")
theme_override_styles/fill = SubResource("StyleBoxFlat_c1xnl")
value = 50.0
show_percentage = false

[node name="Cross" type="TextureRect" parent="UI/StaminaBar"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(24, 24)
texture = ExtResource("25_5ufdy")
expand_mode = 1

[node name="Current score" type="Label" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 224.0
offset_top = 72.0
offset_right = -224.0
offset_bottom = 183.0
grow_horizontal = 2
pivot_offset = Vector2(208, 56)
theme_override_colors/font_color = Color(0.68, 0.73, 0.8, 1)
theme_override_fonts/font = ExtResource("24_yplha")
theme_override_font_sizes/font_size = 90
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Panel" parent="UI"]
unique_name_in_owner = true
process_mode = 2
visible = false
z_index = 1
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f0w2d")

[node name="BlurTextureRect" type="TextureRect" parent="UI/Menu"]
z_index = -1
material = SubResource("ShaderMaterial_dg882")
layout_mode = 1
anchors_preset = -1
anchor_left = -0.051
anchor_top = -0.024
anchor_right = 1.051
anchor_bottom = 1.024
offset_left = -0.0159988
offset_top = -0.447998
offset_right = 0.0159912
offset_bottom = 0.447876
texture = SubResource("PlaceholderTexture2D_hvl06")

[node name="MenuPanel" type="VBoxContainer" parent="UI/Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.019
anchor_right = 0.5
anchor_bottom = 0.986
offset_left = -376.0
offset_top = 0.383999
offset_right = 376.0
offset_bottom = -0.704102
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 760)
theme = SubResource("Theme_3pdej")
theme_override_constants/separation = 10
alignment = 1
script = ExtResource("17_pb6ig")

[node name="Resume" type="Button" parent="UI/Menu/MenuPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 170)
layout_mode = 2
theme = ExtResource("17_l1n2d")
theme_override_font_sizes/font_size = 86
text = "KEY_RESUME"
text_overrun_behavior = 1

[node name="Settings" type="Button" parent="UI/Menu/MenuPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("17_l1n2d")
text = "KEY_SETTINGS"
text_overrun_behavior = 1

[node name="Main Menu" type="Button" parent="UI/Menu/MenuPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme = ExtResource("17_l1n2d")
text = "KEY_MENU"
text_overrun_behavior = 1

[node name="SettingsVBox" parent="UI/Menu" instance=ExtResource("19_qg7uq")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = -88.0
offset_top = 341.5
offset_right = 88.0
offset_bottom = -340.5
pivot_offset = Vector2(352, 491.5)

[node name="Info panel" type="Panel" parent="UI/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.218
anchor_right = 0.98
anchor_bottom = 0.218
offset_left = 0.319999
offset_top = -79.264
offset_right = -0.320007
offset_bottom = 80.736
theme_override_styles/panel = SubResource("StyleBoxFlat_ogkg5")

[node name="Best score" type="Label" parent="UI/Menu/Info panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.051
anchor_top = -0.024
anchor_right = 1.051
anchor_bottom = -0.024
offset_left = -502.25
offset_top = 19.84
offset_right = 33.75
offset_bottom = 89.84
theme_override_colors/font_color = Color(0.392157, 0.65098, 1, 1)
theme_override_fonts/font = ExtResource("23_7qgra")
theme_override_font_sizes/font_size = 56
text = "KEY_BEST_SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Best score count" type="Label" parent="UI/Menu/Info panel/Best score"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.051
anchor_top = -0.024
anchor_right = 1.051
anchor_bottom = -0.024
offset_left = -459.336
offset_top = 65.68
offset_right = -131.336
offset_bottom = 135.68
theme_override_colors/font_color = Color(0.678431, 0.729412, 0.8, 1)
theme_override_fonts/font = ExtResource("24_yplha")
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/Menu/Info panel"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -24.0
offset_right = 78.0
offset_bottom = 24.0
pivot_offset = Vector2(24, 24)
texture = ExtResource("13_trycy")

[node name="Total coins" type="Label" parent="UI/Menu/Info panel/TextureRect"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -56.0
offset_right = 272.0
offset_bottom = 55.0
pivot_offset = Vector2(120, 56)
theme_override_colors/font_color = Color(0.952941, 0.67451, 0, 1)
theme_override_fonts/font = ExtResource("24_yplha")
theme_override_font_sizes/font_size = 90
text = "0"
vertical_alignment = 1

[node name="Back" type="Button" parent="UI/Menu"]
layout_mode = 0
offset_left = -248.0
offset_top = 64.0
offset_right = -64.01
offset_bottom = 248.0
pivot_offset = Vector2(92, 92)
theme = ExtResource("17_l1n2d")
icon = ExtResource("20_lddes")
icon_alignment = 1
expand_icon = true

[node name="Save indicator" type="Label" parent="UI"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -424.0
offset_top = -88.0
offset_right = -31.0
offset_bottom = -16.0
pivot_offset = Vector2(197, 36)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("22_7g7lu")
theme_override_font_sizes/font_size = 48
text = "KEY_SAVED"
horizontal_alignment = 2

[connection signal="button_down" from="UI/Pause" to="Player" method="_on_pause_button_down"]
[connection signal="pressed" from="UI/Pause" to="UI/Menu/MenuPanel" method="_on_pause_pressed"]
[connection signal="pressed" from="UI/Menu/MenuPanel/Resume" to="UI/Menu/MenuPanel" method="_on_resume_pressed"]
[connection signal="pressed" from="UI/Menu/MenuPanel/Settings" to="UI/Menu/MenuPanel" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Menu/MenuPanel/Main Menu" to="UI/Menu/MenuPanel" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UI/Menu/Back" to="UI/Menu/MenuPanel" method="_on_back_pressed"]
[connection signal="pressed" from="UI/Menu/Back" to="UI/Menu/Back" method="_on_pressed"]
